--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,3 @@
 <h1>{{title}} 🚀</h1>
-<p>Welcome Ironhacker!</p>
+<p>Welcome Dancer!</p>
+<a href="/DanceSchool">Checkout where and when to dance here 💃🎶</a>
