school views login and edit

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,8 +6,24 @@
       <div class="input-group">
         <h1>{{title}} 🚀</h1>
         <div class="m-5">
-          <a href="/signup/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"> Sign Up </a>
-          <a href="/login/" class="btn btn-warning btn-lg active" role="button" aria-pressed="true"> Log In</a></div>
+          <a
+            href="/signup/"
+            class="btn btn-primary btn-lg active"
+            role="button"
+            aria-pressed="true"
+          > Sign Up </a>
+          <a
+            href="/login/"
+            class="btn btn-warning btn-lg active"
+            role="button"
+            aria-pressed="true"
+          > Log In</a></div>
+          <a
+            href="/signup/"
+            class="btn btn-danger btn-lg active"
+            role="button"
+            aria-pressed="true"
+          > Dance School Sign Up</a></div>
         {{! <input type="search" class="form-control rounded" name="search" />
         <button type="submit" class="btn btn-outline-dark">Search for an Artist</button> }}
       </div>
@@ -20,11 +36,6 @@
 <style>
   video { object-fit: cover; width: 100vw; height: 100vh; position: fixed; top:
   0; left: 0; } .viewport-content { position: relative; z-index: 1; height:
-  100%; }
-  .input-group {
-      background-color: rgba(0, 0, 0, 0.3);
-      color: #fff;
-      padding-top: 70px;
-      padding-left: 30px;
-  }
+  100%; } .input-group { background-color: rgba(0, 0, 0, 0.3); color: #fff;
+  padding-top: 70px; padding-left: 30px; }
 </style>
