--- a/views/school/index.hbs
+++ b/views/school/index.hbs
@@ -1,8 +1,37 @@
-{{!-- <h1>Our perfectly curated dance schools</h1>
-{{#each clients}}
-    <img src="{{this.image}}" alt="{{this.school}}">
-    <h2>{{this.school}}</h2>
-    <h4>{{this.danceStyle}}</h4>
-    <a href="/dance-school/{{ this._id }}">See Details</a>
-    <a href="/dance-school/{{ this._id }}/reserve">Reserve a lesson now</a>
-{{/each}} --}}
+{{#if school}}
+  {{#each school}}
+    <h1 class="title">{{this.school}}</h1>
+    <div class="content row">
+      <div class="col-2">
+        <img width="100%" src="{{this.image}}" alt="{{this.school}}" />
+      </div>
+      <div class="col-8">
+        <h4>Dance Style: {{this.danceStyles}}</h4>
+        <ul class="list-group mt-5 mb-5">
+            <li class="list-group-item"><b>Days you are offering lessons:</b> {{this.days}}</li>
+            <li class="list-group-item"><b>Time you are offering lessons:</b> {{this.time}}</li>
+            <li class="list-group-item"><b>Price per lesson:</b> €{{this.price}}</li>
+        </ul>
+        <a href="/school/{{this.id}}/edit" class="btn btn-outline-success">Edit your wonderful profile</a>
+      </div>
+
+    </div>
+  {{/each}}
+{{else}}
+  <h3>Not found</h3>
+{{/if}}
+
+<style>
+    .title {
+        background-color:salmon;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        padding: 5px;
+        padding-left: 5%;
+        
+    }
+    .content {
+        margin-top: 90px;
+    }
+</style>
