--- a/views/school/edit.hbs
+++ b/views/school/edit.hbs
@@ -1,20 +1,103 @@
-{{!-- <h2>Edit a Movie</h2>
-<form action="/movies/{{movie._id}}" method="POST">
-  <label for="title">Title</label> 
-  <input id="title" type="text" name="title" value="{{ movie.title }}">
-  
-  <label for="genre">Genre</label> 
-  <input id="genre" type="text" name="genre" value="{{ movie.genre}}">
-  
-  <label for="plot">Plot</label> 
-  <input id="plot" type="text" name="plot" value="{{ movie.plot}}">
-  
-  <select name="cast" multiple>
-    {{#each celebrities}}
-      {{{selector ../movie}}}
-    {{/each}}
-    {{!-- {{{ options }}} --}}
-  {{!-- </select>
+<h2>Edit your Dancing School</h2>
+{{#if school}}
+  {{#each school}}
+    <form action="/movies/{{school._id}}" method="POST">
+      <div class="form-group">
+        <label for="school">School Name</label>
+        <input
+          class="form-control"
+          id="school"
+          type="text"
+          name="school"
+          value="{{this.school}}"
+        />
+      </div>
 
-  <button type="submit">Update</button>
-</form> --}} 
+      {{!-- <label for="image">Image</label> 
+  <input id="image" type="text" name="image" value="{{ school.image }}"> --}}
+
+      <div class="form-group mt-3">
+        <label for="danceSyle">Dance Style</label>
+        <select
+          class="form-control"
+          id="danceStyle"
+          name="danceStyle"
+          value="{{this.danceStyle}}"
+        >
+          <option></option>
+          <option>Bachata</option>
+          <option>Contemporary</option>
+          <option>Modern</option>
+          <option>Salsa</option>
+          <option>Swing</option>
+        </select>
+      </div>
+
+      <div class="form-group mt-3">
+        <label for="teacher">Teacher</label>
+        <input
+          class="form-control"
+          id="teacher"
+          type="text"
+          name="teacher"
+          value="{{this.teacher}}"
+        />
+      </div>
+
+      <div class="form-group mt-3">
+        <label for="days">Days</label>
+        <select
+          class="form-control"
+          id="days"
+          name="days"
+          value="{{this.days}}"
+        >
+          <option></option>
+          <option>Monday</option>
+          <option>Tuesday</option>
+          <option>Wednesday</option>
+          <option>Thursday</option>
+          <option>Friday</option>
+          <option>Saturday</option>
+          <option>Sunday</option>
+        </select>
+      </div>
+
+      <div class="form-group mt-3">
+        <label for="time">Time</label>
+
+        <select
+          class="form-control"
+          id="time"
+          name="time"
+          value="{{this.time}}"
+        >
+          <option></option>
+          <option>Morning</option>
+          <option>Afternoon</option>
+          <option>Evening</option>
+        </select>
+      </div>
+
+      <div class="form-group mt-3">
+        <label for="price">Price</label>
+        <input
+          class="form-control"
+          id="price"
+          type="number"
+          name="price"
+          value="{{this.price}}"
+        />
+      </div>
+
+      <div class="mt-4">
+        <button
+          class="btn btn-outline-info btn-lg btn-block col-12"
+          type="submit"
+        >Update Changes</button>
+      </div>
+    </form>
+  {{/each}}
+{{else}}
+  <h3>Not found</h3>
+{{/if}}
