--- a/views/school/index.hbs
+++ b/views/school/index.hbs
@@ -1,5 +1,4 @@
-//<<<<<<< juan/schoolviews
-//{{#if school}}
+{{#if school}}
   {{#each school}}
     <h1 class="title">{{this.school}}</h1>
     <div class="content row">
