--- a/views/school/index.hbs
+++ b/views/school/index.hbs
@@ -14,7 +14,8 @@
         </ul>
         <a href="/school/{{this.id}}/edit" class="btn btn-outline-success">Edit your studio profile</a>
       </div>
-
+    {{/each}}
+{{/if}}
 {{#if school}}
   <h1 class="title">{{school.school}}</h1>
   <div class="content row">
