--- a/views/school/login.hbs
+++ b/views/school/login.hbs
@@ -1,7 +1,7 @@
 <h2>Log In</h2>
 <form action="/login" method="POST">
-  <label for="username">Username: </label>
-  <input type="text" name="username" id="username">
+  <label for="email">Email: </label>
+  <input type="text" name="email" id="email">
   <label for="password">Password: </label>
   <input type="password" name="password" id="password">
   <button type="submit">Log In</button>
