--- a/views/student/edit-profile.hbs
+++ b/views/student/edit-profile.hbs
@@ -1,50 +1,26 @@
+
+{{#with dataFromUser}}
 <h2 class="title">Edit your student profile</h2>
 
 <h4>Contact information:</h4>
-<form action="/student/edit-profile/{{userQonda._id}}" method="POST">
+<form action="/edit-profile" method="POST">
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputFirstName4">First Name</label>
-      <input type="name" class="form-control" id="inputFirstName4" placeholder="First Name">
-    </div>
-    <div class="form-group col-md-6">
-      <label for="inputPassword4">Last Name</label>
-      <input type="name" class="form-control" id="inputLastName4" placeholder="Last Name">
+      <input type="name" class="form-control" id="inputFirstName4" value={{name}}>
     </div>
   </div>
   <div class="form-row">
     <div class="form-group col-md-6">
       <label for="inputEmail4">Email</label>
-      <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-    </div>
-      <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputPhoneNumber4">Phone Number</label>
-      <input type="phone-number" class="form-control" id="inputPhoneNumber4" placeholder="+49 xxx xxx xx xx">
+      <input type="email" class="form-control" id="inputEmail4" value={{email}}>
     </div>
     <div class="form-group col-md-6">
       <label for="inputPassword4">Password</label>
       <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
     </div>
   </div>
-  <div class="form-group">
-    <label for="inputAddress">Address</label>
-    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-  </div>
-  <div class="form-group">
-    <label for="inputAddress2">Address 2</label>
-    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-  </div>
-  <div class="form-row">
-    <div class="form-group col-md-6">
-      <label for="inputCity">City</label>
-      <input type="text" class="form-control" id="inputCity" placeholder="Berlin">
-    </div>
-    <div class="form-group col-md-2">
-      <label for="inputZip">Zip</label>
-      <input type="text" class="form-control" id="inputZip" placeholder="98765">
-    </div>
-  </div>
+
   <div class="form-group">
     <div class="form-check">
       <input class="form-check-input" type="checkbox" id="gridCheck">
@@ -55,4 +31,4 @@
   </div>
   <button type="submit" class="btn btn-primary">Update changes</button>
 </form>
-
+{{/with}}
