updated user class view

--- a/views/indexLoggedin.hbs
+++ b/views/indexLoggedin.hbs
@@ -54,8 +54,9 @@
       //{{/each}} --}}
     </ul>
 
-    <a href="/book/signup/{{_id}}">Book your slot for class ✅</a>
+    <a href="/add-class/{{_id}}">Book your slot for class ✅</a>
     <a href="/book/cancel/{{_id}}">Cancel your slot for class ❌</a>
   </div>
 </div>
 {{/each}}
+
