almost done. Login missing. Edit undone. New school works but database must be dropped and create again

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -43,8 +43,10 @@
 </style> --}}
 <h1>Our perfectly curated dance classes</h1>
 <div>
-  <a href="/signup/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"> Sign Up </a>
+  <a href="/signup/student" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"> Sign Up </a>
+  <a href="/signup/school" class="btn btn-primary btn-lg active" role="button" aria-pressed="true"> Dance School Sign Up </a>
   <a href="/login/" class="btn btn-warning btn-lg active" role="button" aria-pressed="true"> Log In</a>
+  <a href="/login/school" class="btn btn-warning btn-lg active" role="button" aria-pressed="true"> Dance School Log In</a>
 </div>
 <div>
   <h2>Sort by:</h2>
