--- a/views/school/index.hbs
+++ b/views/school/index.hbs
@@ -1,31 +1,15 @@
-{{#if trainings}}
-  {{#each trainings}}
-    <h1 class="title">{{this.school}}</h1>
-    <div class="content row">
-      <div class="col-2">
-        <img width="100%" src="{{this.image}}" alt="{{this.school}}" />
-      </div>
-      <div class="col-8">
-        <h4>Dance Style: {{this.danceStyles}}</h4>
-       <ul class="list-group mt-5 mb-5">
-            <li class="list-group-item"><b>Days you are offering lessons:</b> {{this.days}}</li>
-            <li class="list-group-item"><b>Time you are offering lessons:</b> {{this.time}}</li>
-            <li class="list-group-item"><b>Price per lesson:</b> €{{this.price}}</li>
-        </ul>
-        <a href="/school/{{this.id}}/edit" class="btn btn-outline-success">Edit your studio profile</a>
-      </div>
-    {{/each}}
-{{/if}}
+{{#with school}}
 {{#if school}}
-  <h1 class="title">{{school.school}}</h1>
+  <h1 class="title">{{this.school}}</h1>
   <div class="content row">
     <div class="col-2">
-      <img width="100%" src="{{school.image}}" alt="{{school.school}}" />
+      <img width="100%" src="{{this.image}}" alt="{{this.school}}" />
     </div>
     <div class="col-8">
-      <h4 class="mb-5">Dance Style: {{school.danceStyles}}</h4>
-      <a href="/school/{{school.id}}/edit" class="btn btn-outline-success">Edit
+      <h4 class="mb-5">Dance Style: {{this.danceStyles}}</h4>
+      <a href="/school/{{this._id}}/edit" class="btn btn-outline-primary">Edit
         your wonderful profile</a>
+      <a href="/school/new" class="btn btn-outline-success">Create a new dance lesson</a>
     </div>
     <hr class="mt-5 mb-5" />
     <div class="row">
@@ -51,6 +35,8 @@
 {{else}}
   <h3>There are no trainings listed</h3>
 {{/if}}
+{{/with}}
+
 
 <style>
   .title { background-color:salmon; position: absolute; left: 0; width: 100%;
