--- a/views/school/signup.hbs
+++ b/views/school/signup.hbs
@@ -1,11 +1,14 @@
 <h2>Sign Up</h2>
-<form action="/signup" method="POST">
+<form action="/signup/school" method="POST">
 
-  <label for="name">School Name: </label>
-  <input type="text" name="name" id="name">
+  <label for="school">School Name: </label>
+  <input type="text" name="school" id="school">
 
-  <label for="email">Email: </label>
-  <input type="text" name="email" id="email">
+  <label for="danceStyles">Dance Styles: </label>
+  <input type="text" name="danceStyles" id="danceStyles">
+
+  <label for="username">Email: </label>
+  <input type="text" name="username" id="username">
 
   <label for="password">Password: </label>
   <input type="password" name="password" id="password">
