--- a/views/student/signup.hbs
+++ b/views/student/signup.hbs
@@ -1,5 +1,5 @@
 <h2>Sign Up</h2>
-<form action="/signup" method="POST">
+<form action="/signup/student" method="POST">
 
   <label for="name">Name: </label>
   <input type="text" name="name" id="name">
