--- a/views/indexLoggedin.hbs
+++ b/views/indexLoggedin.hbs
@@ -1,7 +1,7 @@
 {{#with dataFromUser}}
 <h1>Our perfectly curated dance classes</h1>
 <div>
-  <h2>hello {{name}} </h2>
+  <h2>Welcome, {{name}} </h2>
 
 {{/with}}
   <button><a href="/my-trainings"> My classes </a></button>
