--- a/views/student/edit-profile.hbs
+++ b/views/student/edit-profile.hbs
@@ -1,17 +1,28 @@
 
-{{#with dataFromUser}}
 <h2 class="title">Edit your student profile</h2>
 
+{{#with dataFromUser}}
 <h4>Contact information:</h4>
-<form action="/edit-profile" method="POST">
-
-  <label for="name">Name: </label>
-  <input type="text" name="name" id="name" value= {{name}}>
-  <label for="email">Email: </label>
-  <input type="text" name="email" id="email" value= {{email}}>
-  <label for="password">Password: </label>
-  <input type="password" name="password" id="password">
-  <button type="submit">Save Edit</button>
+<form>
+  <div class="form-group" action="/edit-profile" method="POST">
+    <label for="formGroupExampleInput">Name:</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" value= {{name}}>
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Email:</label>
+    <input type="text" class="form-control" id="formGroupExampleInput2" value= {{email}}>
+  </div>
+  <div class="form-group">
+    <label for="formGroupExampleInput2">Password:</label>
+    <input type="text" class="form-control" id="password">
+    <button type="button" class="btn btn-info">Update</button>
+  </div>
 </form>
 
 {{/with}}
+
+
+<style>
+  .title { background-color:salmon; position: absolute; left: 0; width: 100%;
+  padding: 0px; padding-left: 0%; } .content { margin-top: 90%px; }
+</style>
