--- a/views/school/signup.hbs
+++ b/views/school/signup.hbs
@@ -7,8 +7,8 @@
   <label for="danceStyles">Dance Styles: </label>
   <input type="text" name="danceStyles" id="danceStyles">
 
-  <label for="username">Email: </label>
-  <input type="text" name="username" id="username">
+  <label for="email">Email: </label>
+  <input type="text" name="email" id="email">
 
   <label for="password">Password: </label>
   <input type="password" name="password" id="password">
