--- a/views/school/login.hbs
+++ b/views/school/login.hbs
@@ -1,5 +1,5 @@
 <h2>Log In</h2>
-<form action="/login" method="POST">
+<form action="/loginSchool" method="POST">
   <label for="email">Email: </label>
   <input type="text" name="email" id="email">
   <label for="password">Password: </label>
